# arch-autopilot

./: .gitignore  README.md  pyproject.toml
.baseline/: findings.json
.github/workflows/: arch-autopilot.yml
sample_tf/: main.tf
src/arch_autopilot/: cli.py  collect.py  finding.py  model.py  parse_hcl.py  report.py
src/arch_autopilot/graph/: build_graph.py  evaluator.py  guards.py  nodes.py
src/arch_autopilot/rules/: az001_storage_https_only.py  az002_storage_public_blob_access.py  az003_keyvault_purge_protection.py  az004_keyvault_soft_delete_retention.py  az005_nsg_open_ssh_rdp.py  az006_sql_public_network_access.py  az007_storage_encryption_at_rest.py  az008_storage_min_tls.py  az009_storage_network_default_deny.py  az010_keyvault_public_network_disabled.py  registry.py  spec.py
tests/: test_evaluator.py
